[gd_scene load_steps=4 format=3 uid="uid://c1vu4gkmumifi"]

[ext_resource type="Script" uid="uid://okw07tqc3ixi" path="res://ui/bullet_pack_ui.gd" id="1_e4hkk"]
[ext_resource type="Theme" uid="uid://c3lfeadrw1cv" path="res://assets/new_theme.tres" id="2_sh11a"]
[ext_resource type="Texture2D" uid="uid://ctln3pqhd8eo5" path="res://assets/ui/aim/bullet.png" id="3_ygsiu"]

[node name="BulletPackUI" type="Button"]
custom_minimum_size = Vector2(0, 210)
offset_left = 689.0
offset_right = 1446.0
offset_bottom = 210.0
script = ExtResource("1_e4hkk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 36
theme_override_constants/margin_top = 36
theme_override_constants/margin_right = 36
theme_override_constants/margin_bottom = 36

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_sh11a")
theme_override_constants/separation = 50

[node name="BulletSprite" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_ygsiu")
expand_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"MenuLabel"
text = "Name"

[node name="CountLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"MenuLabel"
text = "x3"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
